<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <Button
            android:text="@string/open_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:onClick="openCamera"
            android:backgroundTint="@color/holo_pink_light"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:padding="16dp"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/edittext_uri"
            android:ems="10"
            android:id="@+id/website_edittext"/>
    <Button
            android:text="@string/button_uri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_website_button"
            android:layout_marginBottom="24dp"
            android:onClick="openWebsite"

    />


    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/edittext_loc"
            android:ems="10"
            android:id="@+id/location_edittext"/>
    <Button
            android:text="@string/button_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/open_location_button"
            android:layout_marginBottom="24dp"
            android:onClick="openLocation"

    />



    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:text="@string/edittext_share"
            android:ems="10"
            android:id="@+id/share_edittext"/>
    <Button
            android:text="@string/button_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/share_text_button"
            android:layout_marginBottom="24dp"
            android:onClick="shareText"

    />
    <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_uri_message"
            android:textSize="18sp"
            android:textStyle="bold"
    />
</LinearLayout>